--- a/style.css
+++ b/style.css
@@ -15,9 +15,10 @@
 }
 
 .nav {
-  margin: 1.5rem;
-  margin-left: 2rem;
-  margin-right: 2rem;
+  margin: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  justify-content: center;
 }
 
 .nav-item {
